fixed sidebar spacing, removed fixed widths and heights, added email to footer

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -83,6 +83,16 @@
 
 .team {
 	padding-bottom: 20px;
+  display: flex;
+  flex-flow: wrap;
+  justify-content: space-around;
+}
+
+.team-name {
+  text-align: center;
+  font-family: var(--teamheaderfont);
+  font-size: 1em;
+  color: white;
 }
 
 .teamPics {
@@ -130,8 +140,8 @@
 	background-color: #6CD0E1;
 	font-family: Oswald;
 	font-size: 16px;
-	align-content: space-between;
 	padding-top: 10px;
+  text-align: center;
 }
 
 a	{
